--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,11 +1,23 @@
 .btn {
-  @apply py-2 px-4 w-full text-white font-medium text-lg h-[44px] rounded-[15px] cursor-pointer transition-colors duration-300 ease-in-out;
+  @apply py-2 px-4 font-medium text-lg h-[44px] rounded-[15px] cursor-pointer transition-colors duration-300 ease-in-out;
+}
+
+.btn-circle {
+  @apply rounded-full;
 }
 
 .btn-primary {
-  @apply bg-emerald-500;
+  @apply bg-emerald-500 text-white;
 }
 
 .btn-primary:hover {
   @apply bg-emerald-600;
+}
+
+.btn-secondary {
+  @apply bg-teal-500 text-white;
+}
+
+.btn-secondary:hover {
+  @apply bg-teal-600;
 }
