--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,3 +1,7 @@
 .input-rounded {
   @apply bg-gray-50 text-gray-600 border-1 border-gray-500 rounded-[15px] px-4 py-3;
 }
+
+.error {
+  @apply border-red-500;
+}
